<resources>
    <string name="app_name">Samba Client</string>
    <string name="logo_text">smb</string>
    <string name="application_is_using_samba">Application is using Samba</string>
    <string name="application_is_using_remote_access">Application is using Remote Access</string>

    <string name="authenticate_button">Authenticate</string>

    <string name="hint_address">Samba address</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="hint_domain">Domain</string>
    <string name="hint_share_name">Share name</string>

    <string name="validation_address">Address is required</string>
    <string name="validation_share_name">Share name</string>

    <string name="authentication_success">Authenticated!</string>
    <string name="button_use_share">Use share name</string>
    <string name="remember_address_and_user">Remember address and user</string>
    <string name="remember_share_name">Remember share name</string>
    <string name="authentication_please_use_remote_access">Remote access is not available in current version. Please connect to local network SSID and open application again.</string>
    <string name="button_ok">OK</string>

    <string name="menu_sort_options">Sort options</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maintenance">Maintenance</string>

    <string name="sort_confirm">Confirm</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_file_name">By name</string>
    <string name="sort_modifed_time">By modified time</string>
    <string name="sort_order">Order by</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>

    <string name="create_directory_title">Create directory</string>
    <string name="create_directory_hint">Directory name</string>
    <string name="create_directory_cancel">Cancel</string>
    <string name="create_directory_create">Create</string>

    <string name="prefereces_explorer">File explorer</string>
    <string name="prefereces_show_as_list">Show as list</string>
    <string name="prefereces_show_as_list_summary">Display files list as list or grid</string>
    <string name="prefereces_grid_columns_count">Grid columns count</string>
    <string name="prefereces_other">Other</string>
    <string name="prefereces_home_ssid">Home SSID</string>
    <string name="prefereces_home_ssid_summary">Set Home wifi SSID, when using Samba from local network. Leave empty, when using Samba from static IP.</string>

    <string name="file_download">Download</string>
    <string name="file_open">Open</string>
    <string name="file_delete">Delete</string>
    <string name="file_saved_to">File saved to: </string>
    <string name="file_was_deleted">File was deleted</string>

    <string name="statistics_title">Statistics</string>
    <string name="statistics_used_of" formatted="false">Used %s of %s</string>
    <string name="count_size_title">Count / Size by type</string>
    <string name="type_image">Images %o (%s)</string>
    <string name="type_doc">Documents %o (%s)</string>
    <string name="type_movie">Movies %o (%s)</string>
    <string name="type_archive">Archives %o (%s)</string>
    <string name="type_other">Other %o (%s)</string>
    <string name="biggest_files_title">10 biggest files</string>

    <string name="share_title">Share to Samba</string>
    <string name="share_doc_title">Document title(s)</string>
    <string name="share_button_share">Share</string>
    <string name="share_button_cancel">Cancel</string>
    <string name="share_location">Location</string>
    <string name="share_location_default">Share to root directory (&quot;/&quot;)</string>
    <string name="share_common_error">An unknown error occurred during authentication</string>
    <string name="share_auth_error">User is not authenticated, please login to the application with remembering credentials</string>

    <string name="select_directory_title">Selected directory</string>
    <string name="select_directory_create">Select</string>

    <string name="upload_title">Uploading...</string>
    <string name="upload_completed">Uploaded!</string>
    <string name="upload_close">Close</string>

    <string name="directory_details_size">Directory size</string>
    <string name="directory_details_count">Directories / files count</string>
    <string name="directory_details_created">Created time</string>
    <string name="directory_details_modified">Modified time</string>
    <string name="directory_details_counts_format">%o / %o</string>
    <string name="directory_details_dir_format">/%s</string>

    <string name="location_permission_denied">Location permissions are denied.</string>
    <string name="location_permission_rationale">Please allow location permissions.</string>

</resources>
