<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefereces_explorer">
        <SwitchPreferenceCompat
            android:key="show_as_list"
            android:title="@string/prefereces_show_as_list"
            android:summary="@string/prefereces_show_as_list_summary"
            />
        <com.darekbx.sambaclient.ui.settings.IntEditTextPreference
            android:key="grid_columns_count"
            android:title="@string/prefereces_grid_columns_count"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefereces_other">
        <EditTextPreference
            android:key="local_network_ssid"
            android:title="@string/prefereces_home_ssid"
            android:summary="@string/prefereces_home_ssid_summary"
            />
    </PreferenceCategory>

</PreferenceScreen>
