<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:paddingStart="@dimen/mediumPadding"
        android:paddingTop="@dimen/mediumPadding"
        />
    <RadioGroup
        android:id="@+id/sort_by_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/smallPadding">
        <RadioButton
            android:id="@+id/sort_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_file_name"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/sort_by_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_modifed_time"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mediumPadding"
        android:text="@string/sort_order"
        android:paddingStart="@dimen/mediumPadding"
        />
    <RadioGroup
        android:id="@+id/order_by_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/smallPadding">
        <RadioButton
            android:id="@+id/order_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_asc"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/order_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_desc"
            />
    </RadioGroup>


</LinearLayout>
