<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/document_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/mediumPadding"
        android:paddingEnd="@dimen/mediumPadding"
        android:paddingTop="@dimen/mediumPadding"
        android:text="@string/share_doc_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/document_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/mediumPadding"
        android:paddingEnd="@dimen/mediumPadding"
        android:paddingTop="@dimen/smallPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/document_title_label"
        tools:text="document.txt" />

    <TextView
        android:id="@+id/document_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/mediumPadding"
        android:paddingEnd="@dimen/mediumPadding"
        android:paddingTop="@dimen/largePadding"
        android:text="@string/share_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/document_title" />

    <TextView
        android:id="@+id/document_location"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/mediumPadding"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/mediumPadding"
        android:paddingTop="@dimen/smallPadding"
        android:paddingBottom="@dimen/mediumPadding"
        android:text="@string/share_location_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/document_location_label"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:drawablePadding="@dimen/largePadding"
        />

    <TextView
        android:id="@+id/share_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="@dimen/largePadding"
        android:textColor="@color/error_color"
        style="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/share_auth_error"
        />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallPadding"
        android:text="@string/share_button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_share"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallPadding"
        android:text="@string/share_button_share"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_cancel" />

    <include
        android:id="@+id/loading_layout"
        layout="@layout/layout_progress" />


</androidx.constraintlayout.widget.ConstraintLayout>
